--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,26 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.Material3.DayNight" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Primary colors -->
+
+    <style name="Theme.ManusAgent" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorOnPrimary">@color/onPrimary</item>
         <item name="colorPrimaryContainer">@color/primaryContainer</item>
         <item name="colorOnPrimaryContainer">@color/onPrimaryContainer</item>
 
-        <!-- Secondary colors -->
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorOnSecondary">@color/onSecondary</item>
         <item name="colorSecondaryContainer">@color/secondaryContainer</item>
         <item name="colorOnSecondaryContainer">@color/onSecondaryContainer</item>
 
-        <!-- Background and surface -->
-        <item name="android:windowBackground">@color/background</item>
         <item name="colorBackground">@color/background</item>
         <item name="colorOnBackground">@color/onBackground</item>
         <item name="colorSurface">@color/surface</item>
         <item name="colorOnSurface">@color/onSurface</item>
-
-        <!-- Error colors -->
         <item name="colorError">@color/error</item>
         <item name="colorOnError">@color/onError</item>
     </style>
+
 </resources>
