--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,17 @@
 <resources>
-    <color name="primary">#6200EE</color>
-    <color name="onPrimary">#FFFFFF</color>
-    <color name="primaryContainer">#BB86FC</color>
-    <color name="onPrimaryContainer">#000000</color>
+    <!-- الألوان الأساسية للثيم -->
+    <color name="md_theme_light_primary">#6750A4</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#EADDFF</color>
+    <color name="md_theme_light_onPrimaryContainer">#21005D</color>
 
-    <color name="secondary">#03DAC6</color>
-    <color name="onSecondary">#000000</color>
-    <color name="secondaryContainer">#018786</color>
-    <color name="onSecondaryContainer">#FFFFFF</color>
+    <color name="md_theme_light_secondary">#625B71</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#E8DEF8</color>
+    <color name="md_theme_light_onSecondaryContainer">#1D192B</color>
 
-    <color name="background">#FFFFFF</color>
-    <color name="onBackground">#000000</color>
-    <color name="surface">#FFFFFF</color>
-    <color name="onSurface">#000000</color>
-    <color name="error">#B00020</color>
-    <color name="onError">#FFFFFF</color>
+    <color name="md_theme_light_background">#FFFFFF</color>
+    <color name="md_theme_light_onBackground">#1C1B1F</color>
+    <color name="md_theme_light_surface">#FFFFFF</color>
+    <color name="md_theme_light_onSurface">#1C1B1F</color>
 </resources>
